@@ -168,6 +168,20 @@ end_import
 
 begin_import
 import|import
+name|org
+operator|.
+name|codehaus
+operator|.
+name|jackson
+operator|.
+name|map
+operator|.
+name|ObjectReader
+import|;
+end_import
+
+begin_import
+import|import
 name|java
 operator|.
 name|io
@@ -415,6 +429,24 @@ name|CredentialBasedAccessTokenProvider
 extends|extends
 name|AccessTokenProvider
 block|{
+DECL|field|READER
+specifier|private
+specifier|static
+specifier|final
+name|ObjectReader
+name|READER
+init|=
+operator|new
+name|ObjectMapper
+argument_list|()
+operator|.
+name|reader
+argument_list|(
+name|Map
+operator|.
+name|class
+argument_list|)
+decl_stmt|;
 DECL|field|OAUTH_CREDENTIAL_KEY
 specifier|public
 specifier|static
@@ -702,13 +734,6 @@ argument_list|()
 argument_list|)
 throw|;
 block|}
-name|ObjectMapper
-name|mapper
-init|=
-operator|new
-name|ObjectMapper
-argument_list|()
-decl_stmt|;
 name|Map
 argument_list|<
 name|?
@@ -717,14 +742,7 @@ name|?
 argument_list|>
 name|response
 init|=
-name|mapper
-operator|.
-name|reader
-argument_list|(
-name|Map
-operator|.
-name|class
-argument_list|)
+name|READER
 operator|.
 name|readValue
 argument_list|(
