@@ -620,6 +620,34 @@ begin_import
 import|import
 name|org
 operator|.
+name|codehaus
+operator|.
+name|jackson
+operator|.
+name|map
+operator|.
+name|ObjectReader
+import|;
+end_import
+
+begin_import
+import|import
+name|org
+operator|.
+name|codehaus
+operator|.
+name|jackson
+operator|.
+name|map
+operator|.
+name|ObjectWriter
+import|;
+end_import
+
+begin_import
+import|import
+name|org
+operator|.
 name|slf4j
 operator|.
 name|Logger
@@ -724,6 +752,38 @@ operator|.
 name|getLogger
 argument_list|(
 name|FsVolumeImpl
+operator|.
+name|class
+argument_list|)
+decl_stmt|;
+DECL|field|WRITER
+specifier|private
+specifier|static
+specifier|final
+name|ObjectWriter
+name|WRITER
+init|=
+operator|new
+name|ObjectMapper
+argument_list|()
+operator|.
+name|writerWithDefaultPrettyPrinter
+argument_list|()
+decl_stmt|;
+DECL|field|READER
+specifier|private
+specifier|static
+specifier|final
+name|ObjectReader
+name|READER
+init|=
+operator|new
+name|ObjectMapper
+argument_list|()
+operator|.
+name|reader
+argument_list|(
+name|BlockIteratorState
 operator|.
 name|class
 argument_list|)
@@ -3294,13 +3354,6 @@ name|success
 init|=
 literal|false
 decl_stmt|;
-name|ObjectMapper
-name|mapper
-init|=
-operator|new
-name|ObjectMapper
-argument_list|()
-decl_stmt|;
 try|try
 init|(
 name|BufferedWriter
@@ -3326,10 +3379,7 @@ argument_list|)
 argument_list|)
 init|)
 block|{
-name|mapper
-operator|.
-name|writerWithDefaultPrettyPrinter
-argument_list|()
+name|WRITER
 operator|.
 name|writeValue
 argument_list|(
@@ -3413,10 +3463,7 @@ name|storageID
 argument_list|,
 name|bpid
 argument_list|,
-name|mapper
-operator|.
-name|writerWithDefaultPrettyPrinter
-argument_list|()
+name|WRITER
 operator|.
 name|writeValueAsString
 argument_list|(
@@ -3434,13 +3481,6 @@ parameter_list|()
 throws|throws
 name|IOException
 block|{
-name|ObjectMapper
-name|mapper
-init|=
-operator|new
-name|ObjectMapper
-argument_list|()
-decl_stmt|;
 name|File
 name|file
 init|=
@@ -3451,14 +3491,7 @@ name|this
 operator|.
 name|state
 operator|=
-name|mapper
-operator|.
-name|reader
-argument_list|(
-name|BlockIteratorState
-operator|.
-name|class
-argument_list|)
+name|READER
 operator|.
 name|readValue
 argument_list|(
@@ -3482,10 +3515,7 @@ operator|.
 name|getAbsoluteFile
 argument_list|()
 argument_list|,
-name|mapper
-operator|.
-name|writerWithDefaultPrettyPrinter
-argument_list|()
+name|WRITER
 operator|.
 name|writeValueAsString
 argument_list|(
