@@ -3628,6 +3628,22 @@ name|apache
 operator|.
 name|hadoop
 operator|.
+name|hdfs
+operator|.
+name|web
+operator|.
+name|JsonUtil
+import|;
+end_import
+
+begin_import
+import|import
+name|org
+operator|.
+name|apache
+operator|.
+name|hadoop
+operator|.
 name|io
 operator|.
 name|IOUtils
@@ -4011,20 +4027,6 @@ operator|.
 name|log4j
 operator|.
 name|Logger
-import|;
-end_import
-
-begin_import
-import|import
-name|org
-operator|.
-name|codehaus
-operator|.
-name|jackson
-operator|.
-name|map
-operator|.
-name|ObjectMapper
 import|;
 end_import
 
@@ -21685,19 +21687,12 @@ name|now
 argument_list|)
 argument_list|)
 expr_stmt|;
-name|ObjectMapper
-name|mapper
-init|=
-operator|new
-name|ObjectMapper
-argument_list|()
-decl_stmt|;
 try|try
 block|{
 return|return
-name|mapper
+name|JsonUtil
 operator|.
-name|writeValueAsString
+name|toJsonString
 argument_list|(
 name|topMap
 argument_list|)
