@@ -506,20 +506,6 @@ end_import
 
 begin_import
 import|import
-name|org
-operator|.
-name|codehaus
-operator|.
-name|jackson
-operator|.
-name|map
-operator|.
-name|ObjectMapper
-import|;
-end_import
-
-begin_import
-import|import
 name|com
 operator|.
 name|google
@@ -1786,13 +1772,6 @@ parameter_list|)
 throws|throws
 name|IOException
 block|{
-name|ObjectMapper
-name|mapper
-init|=
-operator|new
-name|ObjectMapper
-argument_list|()
-decl_stmt|;
 name|FsImageProto
 operator|.
 name|INodeSection
@@ -1811,9 +1790,9 @@ decl_stmt|;
 return|return
 literal|"{\"FileStatus\":\n"
 operator|+
-name|mapper
+name|JsonUtil
 operator|.
-name|writeValueAsString
+name|toJsonString
 argument_list|(
 name|getFileStatus
 argument_list|(
@@ -1842,13 +1821,6 @@ name|sb
 init|=
 operator|new
 name|StringBuilder
-argument_list|()
-decl_stmt|;
-name|ObjectMapper
-name|mapper
-init|=
-operator|new
-name|ObjectMapper
 argument_list|()
 decl_stmt|;
 name|List
@@ -1912,9 +1884,9 @@ name|sb
 operator|.
 name|append
 argument_list|(
-name|mapper
+name|JsonUtil
 operator|.
-name|writeValueAsString
+name|toJsonString
 argument_list|(
 name|fileStatusMap
 argument_list|)
@@ -2097,19 +2069,12 @@ parameter_list|)
 throws|throws
 name|IOException
 block|{
-name|ObjectMapper
-name|mapper
-init|=
-operator|new
-name|ObjectMapper
-argument_list|()
-decl_stmt|;
 return|return
 literal|"{\"ContentSummary\":\n"
 operator|+
-name|mapper
+name|JsonUtil
 operator|.
-name|writeValueAsString
+name|toJsonString
 argument_list|(
 name|getContentSummaryMap
 argument_list|(
