@@ -1978,6 +1978,9 @@ Release 2.8.0 - UNRELEASED
     HDFS-9686. Remove useless boxing/unboxing code.
     (Kousuke Saruta via aajisaka)
 
+    HDFS-9768. Reuse ObjectMapper instance in HDFS to improve the performance.
+    (Lin Yiqun via aajisaka)
+
   BUG FIXES
 
     HDFS-7501. TransactionsSinceLastCheckpoint can be negative on SBNs.
